appId: com.thefreeride.rider.stage
---
- launchApp

- tapOn:
    id: "menuNavigationButton"
- tapOn: "Edit Profile"
- assertVisible: Email:.*${USERNAME}.* #regex
- takeScreenshot: ProfileScreen
